gadjid/src/snapshots/gadjid__test__large-DAG27-vs-DAG28.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-DAG-27
g_guess: 100-node-DAG-28
ancestor_aid:
  - 0.0014141414141414141
  - 14
oset_aid:
  - 0.01585858585858586
  - 157
parent_aid:
  - 0.1703030303030303
  - 1686
shd:
  - 0.007676767676767677
  - 38
t:
  - 1
  - 2
  - 6
  - 9
  - 10
  - 15
  - 16
  - 19
  - 23
  - 27
  - 30
  - 31
  - 32
  - 33
  - 35
  - 38
  - 49
  - 50
  - 52
  - 53
  - 54
  - 57
  - 60
  - 61
  - 64
  - 66
  - 69
  - 71
  - 72
  - 75
  - 76
  - 79
  - 80
  - 83
  - 86
  - 87
  - 88
  - 95
  - 97
  - 98
y: 48
z:
  - 3
  - 4
  - 8
  - 12
  - 14
  - 20
  - 25
  - 26
  - 29
  - 34
  - 37
  - 39
  - 40
  - 43
  - 46
  - 47
  - 58
  - 70
  - 81
  - 85
  - 91
  - 92
  - 94
  - 96
possible_descendants_of_t_in_g_guess:
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 3
  - 4
  - 5
  - 7
  - 8
  - 11
  - 12
  - 13
  - 14
  - 17
  - 18
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 28
  - 29
  - 34
  - 36
  - 37
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
oset_for_t_onto_y_in_g_guess:
  - 0
  - 4
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 3
  - 4
  - 5
  - 7
  - 8
  - 11
  - 12
  - 13
  - 14
  - 17
  - 18
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 28
  - 29
  - 34
  - 36
  - 37
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 51
  - 55
  - 56
  - 58
  - 59
  - 62
  - 63
  - 65
  - 67
  - 68
  - 70
  - 73
  - 74
  - 77
  - 78
  - 81
  - 82
  - 84
  - 85
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 3
  - 4
  - 5
  - 7
  - 8
  - 11
  - 12
  - 13
  - 14
  - 17
  - 18
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 28
  - 29
  - 34
  - 36
  - 37
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 51
  - 55
  - 56
  - 58
  - 59
  - 62
  - 63
  - 65
  - 67
  - 68
  - 70
  - 73
  - 74
  - 77
  - 78
  - 81
  - 82
  - 84
  - 85
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 3
  - 4
  - 5
  - 7
  - 8
  - 11
  - 12
  - 13
  - 14
  - 17
  - 18
  - 20
  - 21
  - 22
  - 24
  - 25
  - 26
  - 28
  - 29
  - 34
  - 36
  - 37
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 51
  - 55
  - 56
  - 58
  - 59
  - 62
  - 63
  - 65
  - 67
  - 68
  - 70
  - 73
  - 74
  - 77
  - 78
  - 81
  - 82
  - 84
  - 85
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 99
