gadjid/src/snapshots/gadjid__test__large-DAG28-vs-DAG29.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-DAG-28
g_guess: 100-node-DAG-29
ancestor_aid:
  - 0.26171717171717174
  - 2591
oset_aid:
  - 0.3409090909090909
  - 3375
parent_aid:
  - 0.7182828282828283
  - 7111
shd:
  - 0.4951515151515152
  - 2451
t:
  - 1
  - 2
  - 4
  - 5
  - 9
  - 12
  - 15
  - 18
  - 20
  - 21
  - 22
  - 24
  - 26
  - 27
  - 29
  - 31
  - 32
  - 36
  - 38
  - 39
  - 42
  - 43
  - 45
  - 46
  - 47
  - 49
  - 51
  - 55
  - 56
  - 57
  - 59
  - 62
  - 63
  - 64
  - 65
  - 70
  - 71
  - 73
  - 76
  - 77
  - 79
  - 82
  - 83
  - 86
  - 87
  - 88
  - 89
  - 91
  - 93
y: 61
z:
  - 0
  - 3
  - 6
  - 10
  - 14
  - 35
  - 60
  - 69
  - 80
  - 84
possible_descendants_of_t_in_g_guess:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 3
  - 6
  - 7
  - 8
  - 10
  - 11
  - 13
  - 14
  - 16
  - 17
  - 19
  - 23
  - 25
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 40
  - 41
  - 44
  - 48
  - 50
  - 52
  - 53
  - 54
  - 61
oset_for_t_onto_y_in_g_guess:
  - 0
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 90
  - 91
  - 92
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 3
  - 6
  - 7
  - 8
  - 10
  - 11
  - 13
  - 14
  - 16
  - 17
  - 19
  - 23
  - 25
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 40
  - 41
  - 44
  - 48
  - 50
  - 52
  - 53
  - 54
  - 58
  - 60
  - 61
  - 66
  - 67
  - 68
  - 69
  - 72
  - 74
  - 75
  - 78
  - 80
  - 81
  - 84
  - 85
  - 90
  - 92
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 3
  - 6
  - 7
  - 8
  - 10
  - 11
  - 13
  - 14
  - 16
  - 17
  - 19
  - 23
  - 25
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 40
  - 41
  - 44
  - 48
  - 50
  - 52
  - 53
  - 54
  - 58
  - 60
  - 61
  - 66
  - 67
  - 68
  - 69
  - 72
  - 74
  - 75
  - 78
  - 80
  - 81
  - 84
  - 85
  - 90
  - 92
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 3
  - 6
  - 7
  - 8
  - 10
  - 11
  - 13
  - 14
  - 16
  - 17
  - 19
  - 23
  - 25
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 40
  - 41
  - 44
  - 48
  - 50
  - 52
  - 53
  - 54
  - 58
  - 60
  - 61
  - 66
  - 67
  - 68
  - 69
  - 72
  - 74
  - 75
  - 78
  - 80
  - 81
  - 84
  - 85
  - 90
  - 92
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
