gadjid/src/snapshots/gadjid__test__small-CPDAG01-vs-CPDAG02.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20001.CPDAG-10
g_guess: 20002.CPDAG-10
ancestor_aid:
  - 0.4222222222222222
  - 38
oset_aid:
  - 0.4111111111111111
  - 37
parent_aid:
  - 0.5111111111111111
  - 46
shd:
  - 0.5111111111111111
  - 23
t:
  - 1
y: 4
z:
  - 0
  - 2
  - 6
  - 7
  - 8
possible_descendants_of_t_in_g_guess:
  - 1
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 4
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t: []
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y: []
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 2
  - 6
  - 7
  - 8
