gadjid/src/snapshots/gadjid__test__small-CPDAG02-vs-CPDAG03.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20002.CPDAG-10
g_guess: 20003.CPDAG-10
ancestor_aid:
  - 0.37777777777777777
  - 34
oset_aid:
  - 0.3888888888888889
  - 35
parent_aid:
  - 0.5555555555555556
  - 50
shd:
  - 0.4444444444444444
  - 20
t:
  - 7
y: 1
z:
  - 8
  - 9
possible_descendants_of_t_in_g_guess:
  - 1
  - 4
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 1
  - 4
  - 8
  - 9
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
  - 2
  - 3
  - 9
oset_for_t_onto_y_in_g_guess:
  - 2
  - 3
  - 7
  - 9
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 1
  - 4
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 1
  - 2
  - 3
  - 4
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 4
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 4
  - 8
  - 9
