gadjid/src/snapshots/gadjid__test__small-CPDAG04-vs-CPDAG05.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20004.CPDAG-10
g_guess: 20005.CPDAG-10
ancestor_aid:
  - 0.5666666666666667
  - 51
oset_aid:
  - 0.5777777777777777
  - 52
parent_aid:
  - 0.7777777777777778
  - 70
shd:
  - 0.4888888888888889
  - 22
t:
  - 1
  - 3
  - 4
  - 8
  - 9
y: 6
z:
  - 7
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 0
  - 2
  - 5
  - 6
  - 7
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 6
  - 7
oset_for_t_onto_y_in_g_guess:
  - 0
  - 4
  - 9
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 2
  - 5
  - 6
  - 7
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 2
  - 4
  - 5
  - 6
  - 7
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 2
  - 5
  - 6
  - 7
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 2
  - 5
  - 6
  - 7
