gadjid/src/snapshots/gadjid__test__small-CPDAG05-vs-CPDAG06.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20005.CPDAG-10
g_guess: 20006.CPDAG-10
ancestor_aid:
  - 0.4888888888888889
  - 44
oset_aid:
  - 0.4888888888888889
  - 44
parent_aid:
  - 0.6888888888888889
  - 62
shd:
  - 0.35555555555555557
  - 16
t:
  - 5
y: 1
z:
  - 0
  - 2
  - 3
  - 4
  - 6
  - 7
  - 8
  - 9
possible_descendants_of_t_in_g_guess:
  - 2
  - 5
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t: []
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y: []
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 2
  - 3
  - 4
  - 6
  - 7
  - 8
  - 9
