gadjid/src/snapshots/gadjid__test__small-CPDAG06-vs-CPDAG07.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20006.CPDAG-10
g_guess: 20007.CPDAG-10
ancestor_aid:
  - 0.12222222222222222
  - 11
oset_aid:
  - 0.12222222222222222
  - 11
parent_aid:
  - 0.13333333333333333
  - 12
shd:
  - 0.13333333333333333
  - 6
t:
  - 5
  - 7
y: 9
z:
  - 0
  - 1
possible_descendants_of_t_in_g_guess:
  - 5
  - 7
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 9
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t: []
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y: []
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
