gadjid/src/snapshots/gadjid__test__small-CPDAG07-vs-CPDAG08.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20007.CPDAG-10
g_guess: 20008.CPDAG-10
ancestor_aid:
  - 1
  - 90
oset_aid:
  - 1
  - 90
parent_aid:
  - 1
  - 90
shd:
  - 1
  - 45
t:
  - 0
  - 1
  - 2
  - 3
  - 6
  - 7
y: 8
z:
  - 4
  - 9
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 4
  - 5
  - 8
  - 9
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 8
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 4
  - 5
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 4
  - 5
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 4
  - 5
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 4
  - 5
  - 8
  - 9
